apps/mosquito/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mosquitto
  namespace: mosquitto
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mosquitto
  template:
    metadata:
      labels:
        app: mosquitto
    spec:
      containers:
      - name: mosquitto
        image: eclipse-mosquitto:2.0.15
        ports:
        - containerPort: 1883
        volumeMounts:
        - name: mosquitto-data
          mountPath: /mosquitto/data
        - name: mosquitto-log
          mountPath: /mosquitto/log
        - name: config-file
          mountPath: /.config/mosquitto/mosquitto.conf
          subPath: mosquitto.conf
        resources:
          requests:
            memory: "512Mi"
            cpu: "1"
          limits:
            memory: "512Mi"
            cpu: "1"
      volumes:
      - name: config-file
        configMap:
          name: mosquitto-config
      - name: mosquitto-data
        emptyDir: {}
      - name: mosquitto-log
        emptyDir: {}
