apps/mosquito/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mosquito-service
  namespace: mosquito
  annotations:
    tailscale.com/expose: "true"
    tailscale.com/hostname: "mosquito"
spec:
  type: ClusterIP
  selector:
    app: mosquito
  ports:
  - name: http
    port: 80
    targetPort: 1883
