apps/mosquito/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ssl-mosquito-ingress
  namespace: mosquito
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "cloudflare-issuer"
spec:
  tls:
  - hosts:
    - mosquito.invertedorigin.com
    secretName: mosquito-tls-domain
  rules:
  - host: mosquito.invertedorigin.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: mosquito-service
            port:
              number: 80
